     Galician, German, Greek, Hungarian, Italian, Lithuanian, Japanese, Polish,
     Russian, Spanish, Swedish, Turkish
   * updated fonts: DejaVuSans 2.24
 * map editor:
   * Fixed not working "Update transition" and make "Delay transition update"
     directly trigger an update when toggled off.
   * add-ons can now make their custom terrains available in the editor
 * game engine
   * Implemented lazy loading for unit_types
 * multiplayer:
   * Removed Wesbowl
   * Merged 4p A New Land by Bob_the_Mighty
 * WML engine:
   * Fixed most C++ probes for boolean WML attributes to use 
     utils::string_bool() rather than true/false or yes/no string comparisons;
     as a result, they should accept true non-zero values, "on", "yes" or "true"
     strings; and "0", "off", "no" or "false" are considered false values.
   * A variable string's length can now be obtained with [set_variable] 
     string_length=
   * Implemented [variable] boolean_not_equals= for simmetry with [variable]
     boolean_equals=
   * Implemented [store_map_dimensions], which saves the map size in a variable
     with values 'height' and 'width'
   * [modify_side] can set AI parameters now, using the [ai] syntax implemented
     for [side] declarations (patch #984)
   * allow 100% defense instead of cutting off at 99%, if out of range set to
     100% instead of 50 (debian bug #467253)
   * The UnitWML [unit] tag is changed to [unit_type].  [unit] will still
     be accepted for backwards compatibility until 1.5.3.  wmllint can safely
     do this up-conversion.
   * In SingleUnitWML and SideWML, the description= attribute is now id=. 
     description= will still be accepted for backwards compatibility.
     wmllint can safely do this up-conversion.
   * In SingleUnitWML and SideWML, the user_description= attribute is now 
     name=. user_description= will still be accepted for backwards 
     compatibility.  wmllint can safely do this up-conversion.