@@ -33,6 +33,7 @@ Version 1.5.0-svn:
    * Fixed not working "Update transition" and make "Delay transition update"
      directly trigger an update when toggled off.
    * add-ons can now make their custom terrains available in the editor
+   * Draw base terrain under an overlay when ALT is pressed
  * game engine
    * Implemented lazy loading for unit_types
  * multiplayer:
